# embedded-sound-classifier

./: .gitignore  FFT_extract.c  FFT_extract.cpp  FFT_receive.py  README.md  client.py  keylogger.py
FFT/: FFT.layout  main.cpp
FFT-software/: .gitignore  FFT.dev  FFT.layout
FFT-software/samples/: 10space_pause_10space_pause.pcm  10space_pause_10space_pause.pcm_FFT.csv  500hz.pcm  500hz.pcm_FFT.csv  silence.pcm
FFT/samples/: silence.pcm_FFT.csv
ProjectReport/: title_page_1.aux
docs/report-latex/: bibliography.bib  main.aux  main.run.xml  main.tex
miosix-kernel/: .gitignore  CMakeLists.txt  Makefile  button.cpp  button.h  codec.h  main.cpp  microphone.cpp  microphone.h  types.h
miosix-kernel/miosix/: CMakeLists.txt
miosix-kernel/miosix/_examples/sad_trombone/: adpcm.c  adpcm.h
miosix-kernel/miosix/_tools/bootloaders/stm32/uc_loader_ethboardv2/: bootloader.hex
miosix-kernel/miosix/_tools/bootloaders/stm32/uc_loader_stm3210e-eval/: bootloader.hex
miosix-kernel/miosix/_tools/bootloaders/stm32/uc_loader_stm3220g-eval/: bootloader.hex
miosix-kernel/miosix/_tools/compiler/windows-installer/: MiosixInstaller.iss
miosix-kernel/miosix/arch/arm7_lpc2000/lpc2138_miosix_board/: lpc2138_armusbocd.cfg
miosix-kernel/miosix/arch/common/CMSIS/Device/ST/STM32F10x/Source/Templates/: system_stm32f10x.c
miosix-kernel/miosix/arch/common/CMSIS/Device/ST/STM32F2xx/Include/: stm32f205xx.h  stm32f207xx.h  stm32f215xx.h  stm32f217xx.h  stm32f2xx.h
miosix-kernel/miosix/arch/common/CMSIS/Device/ST/STM32F2xx/Source/Templates/: system_stm32f2xx.c
miosix-kernel/miosix/arch/common/CMSIS/Device/ST/STM32F4xx/Source/Templates/: system_stm32f4xx.c
miosix-kernel/miosix/arch/cortexM3_efm32gg/common/: arch_settings.h
miosix-kernel/miosix/arch/cortexM3_stm32/common/: arch_settings.h
miosix-kernel/miosix/arch/cortexM3_stm32f2/common/: arch_settings.h
miosix-kernel/miosix/arch/cortexM4_stm32f4/common/: arch_settings.h
miosix-kernel/miosix/arch/cortexM7_stm32h7/common/: arch_settings.h
miosix-kernel/miosix/config/: CMakeLists.txt  Makefile.inc  miosix_settings.h
miosix-kernel/miosix/config/arch/cortexM4_stm32f4/stm32f407vg_stm32f4discovery/: board_settings.h
miosix-kernel/miosix/config/arch/cortexM4_stm32f4/stm32f407vg_thermal_test_chip/: board_settings.h
miosix-kernel/miosix/filesystem/fat32/: ff.cpp  ff.h  ffconf.h
miosix-kernel/miosix/util/: version.cpp
miosix-kernel/miosix_np_2/nbproject/: configurations.xml  project.xml
miosix-kernel/miosix_np_2/nbproject/private/: configurations.xml  private.xml
miosix-kernel/src/: button.cpp  button.h  codec.cpp  endian.h  main.cpp  microphone.cpp  microphone.h  tm_stm32f4_fft.h
miosix-kernel/src/fft/: fft.c  fft.cpp  fft.h  window.cpp  window.h
miosix-kernel/src/neural-network/: aeabi_memcpy.c  ai_datatypes_internal.h  app_x-cube-ai.c  arm_dot_prod_f32.c  core_common.h  network.c  network.h  network_data.c  network_data.h
miosix-kernel/src/peripheral/: button.cpp  button.h  crc.cpp  crc.h  microphone.cpp  microphone.h
neural-network/: model.h5  trainer.py
neural-networks/: 10space_pause_10space_pause.pcm_FFT.csv  KEYdeepl.py  clap_whistle_silence_data.csv  classifier_clap_whistle_silence.py  model.h  model.h5  model.json  silence.pcm_FFT.csv  test_cws.csv  weights.h5  weights_2.h5
report/: bibliography.bib  main.tex  title_page_1.tex
samples/fft_1024/: clap_person1_1.csv  clap_person1_2.csv  clap_person1_3.csv  clap_person1_4.csv  clap_person1_5.csv  clap_person1_6.csv  clap_person1_7.csv  clap_person3_1.csv  clap_person3_2.csv  clap_person4_1.csv  clap_person4_2.csv  clap_person5_1.csv  clap_person5_2.csv  clap_person5_3.csv  clap_person5_4.csv  clap_person5_5.csv  clap_person5_6.csv  clap_person7_1.csv  silence.csv  whistle_person1_1.csv  whistle_person1_2.csv  whistle_person1_3.csv  whistle_person1_4.csv  whistle_person2_1.csv  whistle_person2_2.csv  whistle_person3_1.csv  whistle_person3_2.csv  whistle_person4_1.csv  whistle_person4_2.csv  whistle_person4_3.csv  whistle_person5_1.csv  whistle_person5_2.csv  whistle_person6_1.csv  whistle_person6_2.csv  whistle_person7_1.csv  whistle_person7_2.csv  whistle_person8_1.csv  whistle_person9_1.csv
